Fix visible user menu in non-chrome browser
In Firefox (and possibly Safari and IE as well) the user menu was
present because it was in the same z-index plane as the button that is
used for the search background. By giving the button a non-zero z-index
it will be displayed above the other navbar items.

--- a/themes/socialbase/components/03-molecules/navigation/navbar/navbar.scss
+++ b/themes/socialbase/components/03-molecules/navigation/navbar/navbar.scss
@@ -394,6 +394,7 @@
   padding: 0;
   transform-origin: 50%;
   transition: all 0.7s cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 10;
 }
 
 .navbar-nav__icon--search {
